--- a/donot-collide/index.html
+++ b/donot-collide/index.html
@@ -4,9 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./css/common.css">
   <title>不要碰撞</title>
 </head>
 <body>
-  
+  <div class="container">
+    <div class="title">不要碰撞</div>
+    <div class="dashbord">
+      这是控制室
+    </div>
+    <div class="main"></div>
+  </div>
 </body>
+<script src="./js/jquery.min.js" ></script>
+<script>
+  $(function(){
+    // 处理逻辑
+
+
+  })
+</script>
 </html>
