--- a/donot-collide/index.html
+++ b/donot-collide/index.html
@@ -28,7 +28,7 @@
     // 创建拖动块物体
 
     // 增加控制的飞船物体
-    var $airship = $('<div id="ariship">').addClass('airship');
+    var $airship = $('<div id="ariship">').addClass('airship').html('搞基飞船');
     var $main = $('#main');
 
     // 障碍物
@@ -36,7 +36,29 @@
       className: 'barrier',
       initX: 10,
       initY: 20,
-      initSpeed: 100
+      initSpeed: 100,
+      move(point){
+        // 障碍物的 坐标和宽高
+        var barriersXY = {
+          w:this.targetSize.width,
+          h:this.targetSize.height,
+          x:point.x,
+          y:point.y
+        };
+        // 飞船的 坐标和宽高
+        var airshipXY = {
+          w: airship.targetSize.width,
+          h: airship.targetSize.height,
+          x:airship.getMovePoint().x,
+          y:airship.getMovePoint().y,
+        }
+        if(isBang(barriersXY, airshipXY) && isBang(airshipXY, barriersXY)){
+          airship.stopMove();
+          this.stopMove();
+          log('闯上啦');
+          alert('bang!!!!!');
+        }
+      }
     });
 
     $main.append($airship);
@@ -47,20 +69,35 @@
     var airship = new Draggable('#ariship', {
       outsideOfSwipper:true,
       start(e){
-        log("点击了",e);
+        // log("点击了",e);
       },
       move(e){
-        log('move ,,',e);
-        if(e.x > 100){
-          log('stop-x');
-          // airship.stopMove();
-        }
+        // log('飞船在移动',e);
+        
       },
       end(e){
-        log('end', e)
+        // log('end', e)
       }
     });
     
+    // 碰撞检测函数
+    function isBang(target, result){
+      var w1 = target.w;
+      var h1 = target.h;
+      var x1 = target.x;
+      var y1 = target.y;
+      var w2 = result.w;
+      var h2 = result.h;
+      var x2 = result.x;
+      var y2 = result.y;
+      if( ((x1 + w1) > x2) && ( x1 < (x2 + w2)) ){
+        if( ((h1+ y1) > y2) && (h1 < (h2 + y2)) ){
+          return true
+        }
+        return false
+      }
+      false
+    }
   })
 </script>
 </html>
